# companywarrior

./: README.md  example-config.json  pyproject.toml
companywarrior/: cli.py
tests/: test_companywarrior.py
